--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<script src="jspm_packages/system.js"></script>
 		<script src="config.js"></script>
-		<script>System.import('src/api/game');</script>
-		<script>System.import('src/manifest');</script>
+		<script>System.import('app/api/game');</script>
+		<script>System.import('app/manifest');</script>
 	</head>
 	<body></body>
 </html>
