--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 	<head>
+		<link rel="stylesheet" href="index.css">
 		<script src="jspm_packages/system.js"></script>
 		<script src="config.js"></script>
 		<script>System.import('app/manifest');</script>
